Done with assignment

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <form id="create-task-form" action="" method="POST">
       <label for="new-task-description">Task description:</label>
       <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <label for="task-color">Priority: </label>
+      <select type="text" id="task-color" name="task-color">
+        <option id='High' value="High">High</option>
+        <option id='Medium' value="Medium">Medium</option>
+        <option id='Low' value="Low">Low</option>
+      </select>
       <input type="submit" value="Create New Task">
     </form>
 
