--- a/updatedindex.html
+++ b/updatedindex.html
@@ -27,7 +27,7 @@
       </ul>
     </div>
 
-    <script src="./src/index.js"></script>
+    <script src="./src/updatedindex.js"></script>
   </div>
 
 </body>
